# torchDFT

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yaml  tests.yaml
examples/: H2_energy.py
src/: functionals.py  utils.py
src/torchdft/: basis.py  constants.py  dataset.py  density.py  errors.py  functional.py  functionals.py  gaussbasis.py  grid.py  gridbasis.py  kinetic_functionals.py  nn_functionals.py  radialbasis.py  scf.py  train_scf.py  trainingtask.py  utils.py  xc_functionals.py
tests/: test_functionals.py  test_grid.py  test_gridbasis.py  test_kinetic_functionals.py  test_nn_functionals.py  test_radial_basis.py  test_scf.py  test_solve_ks.py  test_solve_scf.py  test_train_functional.py  test_xc_functionals.py
