[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=0.12.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "torchdft"
version = "0.0.0"
description = "Deep-learning orbital-free DFT"
authors = [
    "Pablo del Mazo Sevillano <p.mazo.sevillano@fu-berlin.de>",
    "Jan Hermann <jan.hermann@fu-berlin.de>",
]
readme = "README.md"
packages = [
    { include = "torchdft", from = "src" },
]
repository = "https://github.com/nablapsi/torchDFT"
license = "MPL-2.0"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.0"
xitorch = "^0.2.0"
pyscf = { version = "^1.7.6", optional = true }
tensorboard = { version = "^2.5.0", optional = true }

[tool.poetry.extras]
3d = ["pyscf"]
train = ["tensorboard"]

[tool.poetry.dev-dependencies]
flake8 = "^3.5"
flake8-bugbear = ">=18.8"
flake8-comprehensions = ">=1.4"
flake8-quotes = ">=2"
black = ">=20-beta.0"
pep8-naming = ">=0.7"
isort = "^5"
pydocstyle = "^5"
pytest = "^6.2.4"
coverage = "^5.5"
mypy = ">=0.800"

[tool.poetry-dynamic-versioning]
enable = true
dirty = true

[tool.black]
target-version = ["py38"]
